Базовый хендлер воркфлоу
